--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ script:
 - make vendor-status
 - make vet
 - if [ "${LATEST}" = "true" ]; then gox -os="linux darwin windows" -arch="amd64" -output="{{.OS}}/terraform-provider-purestorage" -ldflags "-X main.Rev=`git rev-parse --short HEAD`" -verbose ./...; fi
-- if [ "${LATEST}" = "true" ]; for i in ./*; do; sha1sum $i/terraform-provider-purestorage > terraform-provider-purestorage.$i.sha1; zip terraform-provider-purestorage.$i.zip  $i/terraform-provider-purestorage; fi
+- if [ "${LATEST}" = "true" ]; sha1sum windows/terraform-provider-purestorage.exe > terraform-provider-purestorage.windows.sha1; tar -xvzf terraform-provider-purestorage.windows.zip  windows/terraform-provider-purestorage; fi
+- if [ "${LATEST}" = "true" ]; sha1sum darwin/terraform-provider-purestorage > terraform-provider-purestorage.darwin.sha1; tar -xvzf terraform-provider-purestorage.darwin.zip  darwin/terraform-provider-purestorage; fi
+- if [ "${LATEST}" = "true" ]; sha1sum linux/terraform-provider-purestorage > terraform-provider-purestorage.linux.sha1; tar -xvzf terraform-provider-purestorage.linux.zip  linux/terraform-provider-purestorage; fi
 branches:
   only:
   - master
