--- a/website/src/themes/hugo-theme-techdoc/exampleSite/config.toml
+++ b/website/src/themes/hugo-theme-techdoc/exampleSite/config.toml
@@ -8,8 +8,8 @@ theme = "hugo-theme-techdoc"
 hasCJKLanguage = true
 metaDataFormat = "yaml"
 
+pygmentsCodeFences = true
 pygmentsUseClasses = true
-pygmentsCodefences = true
 
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir= false
@@ -20,7 +20,7 @@ enableMissingTranslationPlaceholders = false
     # Souce Code repository section
     description = "put your description"
     github_repository = "https://github.com/thingsym/hugo-theme-techdoc"
-    version = "0.2.1"
+    version = "0.7.0"
 
     # Documentation repository section
     # documentation repository (set edit link to documentation repository)
@@ -29,15 +29,36 @@ enableMissingTranslationPlaceholders = false
     # Analytic section
     google_analytics_id = "" # Your Google Analytics tracking id
     tag_manager_container_id = "" # Your Google Tag Manager container id
-    google_site_verification = "" # Your Google Site Verification
+    google_site_verification = "" # Your Google Site Verification for Search Console
+
+    # Open Graph and Twitter Cards settings section
+    title = "Hugo Techdoc Theme"
+    images = ["og-image.png"]
+    # See https://gohugo.io/templates/internal/#open-graph
+    # See https://gohugo.io/templates/internal/#twitter-cards
 
     # Theme settings section
+    # Theme color
+    custom_font_color = ""
+    custom_background_color = ""
+
+    # Documentation Menu section
+    # Menu style settings
+    menu_style = "open-menu" # "open-menu" or "slide-menu"
+
+    # Date format
     dateformat = "" # default "2 Jan 2006"
     # See the format reference https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
 
     # path name excluded from documentation menu
-    menu_exclusion = ["archives", "blog", "entry", "post", "posts"]
-
+    menu_exclusion = [
+        "archives",
+        "archive",
+        "blog",
+        "entry",
+        "post",
+        "posts"
+    ]
 
 # Global menu section
 [[menu.main]]
@@ -49,3 +70,9 @@ enableMissingTranslationPlaceholders = false
     name = "Twitter"
     url = "https://twitter.com/thingsym"
     weight = 2
+
+[markup]
+  [markup.tableOfContents]
+    startLevel = 2
+    endLevel = 4
+    ordered = false
